--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     </header>
     <main>
       <section id="photo-template">
-        <h2></h2>
+        <h2>Hello World</h2>
         <img src="" alt="">
         <p></p>
       </section>
     </main>
     <footer>
+        <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
+        <script type = "text/javascript" src="js/app.js"></script>
       &copy; 2018 Code Fellows
     </footer>
   </body>
