--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <section id="photo-template">
         <h2>Hello World</h2>
         <img src="" alt="">
-        <p></p>
+        <p id = "descript"></p>
+        <p id = "keyword"></p>
+        <p id = "horns"></p>
+
       </section>
     </main>
     <footer>
