--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
-        <script type = "text/javascript" src="js/app.js"></script>
+        <!-- <script type = "text/javascript" src="js/app.js"></script> -->
+        <script type = "text/javascript" src="js/myapp.js"></script>
+
       &copy; 2018 Code Fellows
     </footer>
   </body>
