--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="./styles/reset.css"/> -->
+    <link rel="stylesheet" href="css/layout.css">
   </head>
   <body>
     <header>
