--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.2.0/handlebars.min.js"></script>
-        <script type = "text/javascript" src="js/app.js"></script>
+        <script type = "text/javascript" src="./js/app.js"></script>
 
       &copy; 2018 Code Fellows
     </footer>
