--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.2.0/handlebars.min.js"></script>
         <script type = "text/javascript" src="./js/app.js"></script>
+        <script type = "text/javascript" src="./js/sort.js"></script>
 
       &copy; 2018 Code Fellows
     </footer>
