site doubles at bottom, incomplete

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       </select>
     </header>
     <main>
+      <button id = "button1">Page one Reults</button>
+      <button id = "button2">Page two Results</button>
+
       <section id="photo-template">
         <h2>Hello World</h2>
         <img src="" alt="">
